--- a/admin.html
+++ b/admin.html
@@ -30,7 +30,7 @@
         <button onclick="switchPanel('chat')">
           <i class="fa-regular fa-comments"></i> Chat
         </button>
-        <button onclick="switchPanel('config')">
+        <button onclick="switchPanel('config'); switchConfigTab('coupons')">
           <i class="fa-solid fa-sliders"></i> Configurações
         </button>
         <button onclick="switchPanel('delivery')">
