sistema de detecção de falhas

--- a/index.html
+++ b/index.html
@@ -1200,5 +1200,53 @@
         </div>
       </div>
     </div>
+
+    <div
+      id="modal-cookie-error"
+      class="modal-overlay"
+      style="display: none; z-index: 9999"
+    >
+      <div
+        class="modal-content"
+        style="max-width: 450px; text-align: center; border: 2px solid #e74c3c"
+      >
+        <div style="font-size: 3rem; margin-bottom: 15px">🍪🚫</div>
+        <h2 style="color: #e74c3c">Cookies Bloqueados</h2>
+        <p style="color: #ccc; margin: 15px 0; line-height: 1.5">
+          Seu navegador está bloqueando <strong>Cookies de Terceiros</strong>.
+          Como nosso sistema é seguro (HttpOnly), precisamos dessa permissão
+          para manter você logado.
+        </p>
+
+        <div
+          style="
+            background: #222;
+            padding: 10px;
+            border-radius: 8px;
+            text-align: left;
+            font-size: 0.9rem;
+            color: #aaa;
+            margin-bottom: 20px;
+          "
+        >
+          <strong>Como resolver:</strong>
+          <ul style="margin-left: 20px; margin-top: 5px">
+            <li>
+              Desative o "Bloqueador de Rastreamento" ou "Escudo" do navegador
+              para este site.
+            </li>
+            <li>Ou permita cookies de terceiros nas configurações.</li>
+            <li>Tente usar o Google Chrome padrão (fora do modo anônimo).</li>
+          </ul>
+        </div>
+
+        <button
+          onclick="window.location.href='index.html'"
+          class="btn-primary full-width"
+        >
+          Entendi, vou tentar novamente
+        </button>
+      </div>
+    </div>
   </body>
 </html>
